<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE3E3"
    tools:context="activity.TaskDetailActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="416dp"
        android:layout_height="65dp"
        android:background="#9E3A46"
        android:gravity="center"
        android:text="Add a Task"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <Spinner
        android:id="@+id/addTaskStateSpinner"
        android:layout_width="349dp"
        android:layout_height="53dp"
        android:background="#D1A4A4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaskStatusTextView"
        app:layout_constraintVertical_bias="0.04" />

    <Spinner
        android:id="@+id/addTaskTeamSpinner"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:background="#D1A4A4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTeamTextView"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/TaskStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:background="#EAE3E3"
        android:backgroundTint="#EAE3E3"
        android:text="Status"
        android:textColor="#BA0F0F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDescriptionText"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/taskTeamTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="#EAE3E3"
        android:backgroundTint="#EAE3E3"
        android:text="Team"
        android:textColor="#BA0F0F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskStateSpinner"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/taskTileEditText"
        android:layout_width="235dp"
        android:layout_height="46dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="My Task"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/taskTileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#ECE9E9"
        android:backgroundTint="#EDE6E6"
        android:hapticFeedbackEnabled="false"
        android:text="Task Title"
        android:textColor="#C64D4D"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/taskDescriptionEditText"
        android:layout_width="203dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8A8787"
        android:ems="10"
        android:inputType="text"
        android:text="Do Something"
        android:textColor="@color/black"
        android:textColorHint="#878787"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTileEditText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/taskDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="#EAE3E3"
        android:backgroundTint="#EAE3E3"
        android:text="Task Description"
        android:textColor="#BA0F0F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTileText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/submittedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submitted!"
        android:textColor="#00FF00"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="62dp"
        android:layout_height="37dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="14dp"
        android:adjustViewBounds="false"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="#03A8F2"
        android:backgroundTintMode="src_in"
        android:baselineAlignBottom="false"
        android:contentDescription="Back"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/saveTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:backgroundTint="#BA0F0F"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTeamSpinner" />

    <ImageView
        android:id="@+id/addTaskImageView"
        android:layout_width="134dp"
        android:layout_height="135dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTeamSpinner"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/addTaskDeleteImageButton"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="84dp"
        android:text="Delete Image"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toEndOf="@+id/addTaskImageView"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTeamSpinner"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addTaskAddImageButton"
        android:layout_width="134dp"
        android:layout_height="49dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:text="Add Image"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toEndOf="@+id/addTaskImageView"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTeamSpinner"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
