<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"

    android:paddingStart="0dp"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingEnd="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp"
    tools:context="fragment.TaskListFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="50px"
        android:layout_marginRight="20px"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/taskFragmentTextView"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:background="#E6D9D9"
            android:gravity="center"
            android:text="@string/hello_blank_fragment"
            android:textColor="#000000"
            android:textSize="16sp"

            />
    </androidx.cardview.widget.CardView>

</FrameLayout>