...
        app:layout_constraintVertical_bias="0.523"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/TaskTitleTextView"
        android:layout_width="169dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/task_title"
        android:textColor="#000000"
...
